--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     
       <!--Favicon-->
       <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-      <!-- Favicon icon by Author Name from Platform Name -->
+      <!-- Favicon icon by Smashicons from www.flaticon.com -->
     <title>Book Tracker</title>
   </head>
   <body>
